--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FireBaseDemoApp</string>
+    <string name="notification_title">Test Notification</string>
+    <string name="firebase_cloud_messaging">Firebase Cloud Messaging</string>
 </resources>
